// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Antd/FileList renders correctly for view file: search 1`] = `
<Space
  style={
    Object {
      "float": "left",
      "marginBottom": 16,
    }
  }
>
  <Input
    id="search"
    onChange={[Function]}
    placeholder="Search"
    prefix={<ForwardRef(SearchOutlined) />}
    size="large"
    type="text"
    value=""
  />
</Space>
`;

exports[`components/Antd/FileList renders correctly for view file: table 1`] = `
<TableLayout
  actions={
    Object {
      "render": [Function],
    }
  }
  columns={
    Array [
      Object {
        "dataIndex": "identifier",
        "ellipsis": true,
        "key": "identifier",
        "sortOrder": undefined,
        "sorter": [Function],
        "title": "Identifier",
      },
      Object {
        "dataIndex": "label",
        "ellipsis": true,
        "key": "label",
        "sortOrder": undefined,
        "sorter": [Function],
        "title": "File Name",
      },
      Object {
        "dataIndex": "version",
        "ellipsis": true,
        "key": "version",
        "sortOrder": undefined,
        "sorter": [Function],
        "title": "File Version",
      },
      Object {
        "dataIndex": "createdAt",
        "ellipsis": true,
        "key": "createdAt",
        "render": [Function],
        "sortOrder": undefined,
        "sorter": [Function],
        "title": "Created at",
      },
      Object {
        "dataIndex": "module",
        "key": "module",
        "title": "Module",
      },
      Object {
        "key": "_actions",
        "render": [Function],
        "title": "Actions",
      },
    ]
  }
  datasource={
    Array [
      Object {
        "createdAt": "Jun 19, 2020, 12:31:37 PM",
        "form_relation": "",
        "id": "52",
        "identifier": "test-form-1.json",
        "isDraft": false,
        "isJsonValidator": false,
        "jursdiction": "",
        "label": "test form",
        "module": "",
        "version": "1.0.26",
      },
      Object {
        "createdAt": "Jun 19, 2020, 4:23:22 PM",
        "form_relation": "",
        "id": "53",
        "identifier": "reveal-test-file.json",
        "isDraft": false,
        "isJsonValidator": false,
        "jursdiction": "",
        "label": "test publish",
        "module": "",
        "version": "1.0.27",
      },
    ]
  }
  id="FormFileList"
  onChange={[Function]}
  persistState={true}
/>
`;

exports[`components/Antd/FileList renders correctly for view file: title 1`] = `
Object {
  "children": "Releases: 1.0.11",
  "level": 3,
}
`;

exports[`components/Antd/FileList renders correctly for view file: upload button 1`] = `
<Space
  style={
    Object {
      "float": "right",
      "marginBottom": 16,
    }
  }
>
  <ForwardRef(SettingOutlined) />
</Space>
`;

exports[`components/Antd/FileList renders correctly: search 1`] = `
<Space
  style={
    Object {
      "float": "left",
      "marginBottom": 16,
    }
  }
>
  <Input
    id="search"
    onChange={[Function]}
    placeholder="Search"
    prefix={<ForwardRef(SearchOutlined) />}
    size="large"
    type="text"
    value=""
  />
</Space>
`;

exports[`components/Antd/FileList renders correctly: table 1`] = `
<TableLayout
  actions={
    Object {
      "render": [Function],
    }
  }
  columns={
    Array [
      Object {
        "dataIndex": "identifier",
        "ellipsis": true,
        "key": "identifier",
        "sortOrder": undefined,
        "sorter": [Function],
        "title": "Identifier",
      },
      Object {
        "dataIndex": "label",
        "ellipsis": true,
        "key": "label",
        "sortOrder": undefined,
        "sorter": [Function],
        "title": "File Name",
      },
      Object {
        "dataIndex": "version",
        "ellipsis": true,
        "key": "version",
        "sortOrder": undefined,
        "sorter": [Function],
        "title": "File Version",
      },
      Object {
        "dataIndex": "createdAt",
        "ellipsis": true,
        "key": "createdAt",
        "render": [Function],
        "sortOrder": undefined,
        "sorter": [Function],
        "title": "Created at",
      },
      Object {
        "key": "_actions",
        "render": [Function],
        "title": "Actions",
      },
    ]
  }
  datasource={
    Array [
      Object {
        "createdAt": "Jun 19, 2020, 12:31:37 PM",
        "form_relation": "",
        "id": "52",
        "identifier": "test-form-1.json",
        "isDraft": false,
        "isJsonValidator": false,
        "jursdiction": "",
        "label": "test form",
        "module": "",
        "version": "1.0.26",
      },
      Object {
        "createdAt": "Jun 19, 2020, 4:23:22 PM",
        "form_relation": "",
        "id": "53",
        "identifier": "reveal-test-file.json",
        "isDraft": false,
        "isJsonValidator": false,
        "jursdiction": "",
        "label": "test publish",
        "module": "",
        "version": "1.0.27",
      },
    ]
  }
  id="FormFileList"
  onChange={[Function]}
  persistState={true}
/>
`;

exports[`components/Antd/FileList renders correctly: title 1`] = `
Object {
  "children": "JSON Validators",
  "level": 3,
}
`;

exports[`components/Antd/FileList renders correctly: upload button 1`] = `
<Space
  style={
    Object {
      "float": "right",
      "marginBottom": 16,
    }
  }
>
  <React.Fragment>
    <Button
      block={false}
      ghost={false}
      htmlType="button"
      loading={false}
      onClick={[Function]}
      type="primary"
    >
      <ForwardRef(UploadOutlined) />
      Upload New File
    </Button>
    <Divider
      type="vertical"
    />
  </React.Fragment>
  <ForwardRef(SettingOutlined) />
</Space>
`;
